di-packages-build (0.6) UNRELEASED; urgency=low

  * Fix parsing of XC-Package-Type

 -- Bastian Blank <waldi@debian.org>  Sat, 17 Jan 2004 16:08:40 +0100

di-packages-build (0.5) unstable; urgency=low

  * -t only uses usable packages.

 -- Bastian Blank <waldi@debian.org>  Fri, 09 Jan 2004 14:11:23 +0100

di-packages-build (0.4.1) unstable; urgency=low

  * Rerelease to fix unclean upload.

 -- Bastian Blank <waldi@debian.org>  Thu, 08 Jan 2004 17:17:36 +0100

di-packages-build (0.4) unstable; urgency=low

  * Add support for a type argument -t.

 -- Bastian Blank <waldi@debian.org>  Mon, 05 Jan 2004 06:17:47 +0100

di-packages-build (0.3) unstable; urgency=low

  * Use one script for a lot of old scripts which share any logic.
  * Add support for packages with -udeb suffix.

 -- Bastian Blank <waldi@debian.org>  Fri, 12 Dec 2003 12:03:26 +0100

di-packages-build (0.2) unstable; urgency=low

  * New Release.

 -- Bastian Blank <waldi@debian.org>  Tue, 25 Nov 2003 17:16:08 +0100

di-packages-build (0.1) unstable; urgency=low

  * Initial Release.

 -- Bastian Blank <waldi@debian.org>  Sat, 22 Nov 2003 20:17:18 +0100
