@@ -1,0 +1,3 @@
+$(foreach val,$(shell /usr/share/debian-installer/build/make/script),$(eval $(val)))
+BUILDENV_STATIC = CC=$(CC_STATIC) AR=$(AR_STATIC) LD=$(LD_STATIC)
+BUILDENV_UDEB = CC=$(CC_UDEB) AR=$(AR_UDEB) LD=$(LD_UDEB)
